----------
v6.0.0-git
----------

[jan] Don't show application menus in iTip MIME viewer popups.
[mms] Hide subfolder creation option in dynamic view if IMAP server indicates
      that child mailboxes cannot be created.
[mms] Correctly send deleted flag information to browser cache when using
      dynamic/smartmobile view (Bug #11362).
[mms] Auto-update folders list in smartmobile view if special mailbox is
      auto-created (Request #11482).
[mms] Load folders list on-demand in smartmobile view.
[mms] Fix thread view when mailbox is not thread sorted (Bug #11320).
[mms] Display message range when dragging slider on dynamic mailbox page.


-----------
v6.0.0beta4
-----------

[mms] Add predefined templates to ACL management screen (Request #10648).
[mms] Capture key shortcuts on dynamic mailbox page even if focus is on IFRAME
      HTML message data (Bug #11428).
[mms] All IMP templates now use Horde_View.
[mms] Add swipe action buttons to the smartmobile mailbox page.
[mms] Optimize loading of message bodies when using dynamic view.
[mms] Load new mailbox when renaming current mailbox in dynamic view (Request
      #11394).
[mms] Add simple address autocompleter to smartmobile compose page.
[mms] Add refresh button to smartmobile folder page.
[jan] Fix popdown positioning in mailbox table header (Bug #11384).


-----------
v6.0.0beta3
-----------

[mms] Allow certain iCalendar events to be configured to automatically update
      the local user's calendar (Request #11376).
[mms] Remember message selections when changing mailboxes in dynamic view.
[mms] Add ability to edit list of safe addresses used with the
      image_replacement preference.
[mms] Add attachment download links to smartmobile view (Request #11379).
[mms] Indicate deleted messages with strikethrough in smartmobile mailbox
      listing (Request #11362).
[mms] Show polled children in smartmobile folder list when parent mailbox is
      not polled (Bug #11238).